fix image clipping

--- a/src/styles/Review.module.css
+++ b/src/styles/Review.module.css
@@ -7,7 +7,6 @@
   width: 100%;
   position: relative;
   top: 50%;
-  transform: translateY(-50%);
 }
 
 .title {
@@ -69,5 +68,9 @@
 
   .img__container {
     max-height: 66vh;
+  }
+
+  .img {
+    transform: translateY(-50%);
   }
 }
